# tensorheaven

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.txt  Doxyfile  NOTES  NOTES.md  README  README.md  TODO  compound_access_index.cpp  compound_access_index.hpp  compound_index.cpp  compound_index.hpp  compoundindex.cpp  compoundindex.hpp  conceptual_hierarchy_of.sh  contraction_prototype.cpp  core.hpp  expression_templates.hpp  index_map.cpp  index_map.hpp  list.hpp  multiindex.hpp  tensor2.hpp  tensor_lib_prototype.cpp  tuple.hpp  typelist.hpp  typelist_utility.hpp  typestringof.hpp  typetuple.hpp  vector.hpp
applications/: homogeneouspolynomial.hpp  polynomial.hpp  polynomial_util.hpp  polynomial_utility.hpp
include/tenh/: basic.hpp  componentgenerator.hpp  componentindex.hpp  componentqualifier.hpp  core.hpp  dimindex.hpp  expression_templates.hpp  expression_templates_utility.hpp  expressiontemplate_eval.hpp  expressiontemplate_reindex.hpp  list.hpp  mathutil.hpp  memberarray.hpp  multiindex.hpp  preallocatedarray.hpp  print_multiindexable.hpp  proceduralarray.hpp  reindex.hpp  tuple.hpp
lib/: compoundindex.hpp  core.hpp  expression_templates.hpp  expression_templates_utility.hpp  expressiontemplate.hpp  index.hpp  interop_eigen.hpp  interop_eigen_selfadjointeigendecomp.hpp  interop_eigen_svd.hpp  list.hpp  lvd.hpp  naturalpairing.hpp  tensor2.hpp  tensor2antisymmetric.hpp  tensor2diagonal.hpp  tensor2symmetric.hpp  tuple.hpp  typelist.hpp  typelist_utility.hpp  typestringof.hpp  typetuple.hpp  vector.hpp
tenh/: array.hpp  basic.hpp  componentgenerator.hpp  componentindex.hpp  compoundindex.hpp  core.hpp  dimindex.hpp  euclideanembedding.hpp  expression_templates.hpp  expression_templates_utility.hpp  expressiontemplate_eval.hpp  expressiontemplate_indexrenamer.hpp  expressiontemplate_reindex.hpp  immutablearray.hpp  index.hpp  indexrenamer.hpp  innerproduct.hpp  list.hpp  mathutil.hpp  memberarray.hpp  memoryarray.hpp  multiindex.hpp  naturalpairing.hpp  operator.hpp  preallocatedarray.hpp  print_multiindexable.hpp  proceduralarray.hpp  reindex.hpp  static_scalar_constants.hpp  tensor.hpp  tensor2.hpp  tensor2antisymmetric.hpp  tensor2diagonal.hpp  tensor2symmetric.hpp  vector.hpp
tenh/applications/: polynomial.hpp
tenh/basic/: expressionoperand.hpp  operator.hpp  overloads.hpp  reindexable.hpp  vector.hpp
tenh/conceptual/: abstractindex.hpp  basis.hpp  concept.hpp  conceptualinheritancegraph.hpp  diagonalbased2tensorproduct.hpp  directsum.hpp  dual.hpp  embeddableintensorpower.hpp  embeddableintensorproduct.hpp  exteriorpower.hpp  field.hpp  index.hpp  multiindex.hpp  symmetricpower.hpp  tensorpower.hpp  tensorproduct.hpp  vectorspace.hpp
tenh/implementation/: alt.hpp  diagonal2tensor.hpp  directsum.hpp  euclideanembedding.hpp  identity.hpp  implementationof.hpp  innerproduct.hpp  sym.hpp  tensor.hpp  tensorproduct.hpp  vector.hpp  vee.hpp  wedge.hpp
tenh/interface/: array.hpp  embeddableastensor.hpp  expressiontemplate.hpp  memoryarray.hpp  tensor.hpp  vector.hpp
tenh/interop/: eigen.hpp  eigen_invert.hpp  eigen_ldlt.hpp  eigen_linearsolve.hpp  eigen_selfadjointeigendecomp.hpp  eigen_svd.hpp
tenh/meta/: core.hpp  list.hpp  lvd.hpp  static_assert.hpp  tuple.hpp  typelist.hpp  typelist_utility.hpp  typetuple.hpp  (+1 more)
tensorhell/: .gitignore  CMakeLists.txt  adhoc_test.cpp  adhoc_test.hpp  adhoc_test_00.cpp  adhoc_test_01.cpp  adhoc_test_02.cpp  adhoc_test_03.cpp  adhoc_test_04.cpp  adhoc_test_05.cpp  adhoc_test_06.cpp  adhoc_test_07.cpp  adhoc_test_08.cpp  adhoc_test_09.cpp  adhoc_test_10.cpp  adhoc_test_11.cpp  adhoc_test_12.cpp  adhoc_test_13.cpp  adhoc_test_14.cpp  adhoc_test_15.cpp  algebraic_expression_prototype.cpp  asm_exam.cpp  asm_exam_separate_functions.cpp  c++11_usage_prototype.cpp  compile_time_generated_lookup_table.cpp  conceptual_inheritance_prototype.cpp  conceptual_prototype.cpp  conceptual_prototype.hpp  conceptual_prototype_00.cpp  conceptual_prototype_01.cpp  conceptual_prototype_02.cpp  conceptual_prototype_03.cpp  conceptual_prototype_04.cpp  conceptual_prototype_05.cpp  conceptual_prototype_06.cpp  conceptual_prototype_07.cpp  conceptual_prototype_08.cpp  conceptual_prototype_09.cpp  conceptual_prototype_10.cpp  conceptual_prototype_11.cpp  (+14 more)
tensorhell/applications_test/: test.cpp  test.hpp  test_homogeneouspolynomials.cpp  test_homogeneouspolynomials.hpp  test_multivariatepolynomials.cpp  test_multivariatepolynomials.hpp
tensorhell/lvd/: lvd_callstack.cpp  lvd_callstack.hpp  lvd_commandlineparser.cpp  lvd_commandlineparser.hpp  lvd_spawner.cpp  lvd_spawner.hpp  lvd_testsystem.cpp  lvd_testsystem.hpp
tensorhell/standard/: randomize.cpp  randomize.hpp  test.cpp  test.hpp  test_abstractindex.cpp  test_abstractindex.hpp  test_array.cpp  test_array.hpp  test_basic_operator.cpp  test_basic_operator.hpp  test_basic_operator0.cpp  test_basic_operator1.cpp  test_basic_operator2.cpp  test_basic_operator3.cpp  test_basic_operator4.cpp  test_basic_operator5.cpp  test_basic_vector.cpp  test_basic_vector.hpp  test_basic_vector0.cpp  test_basic_vector1.cpp  test_basic_vector2.cpp  test_basic_vector3.cpp  test_basic_vector4.cpp  test_basic_vector5.cpp  test_dimindex.cpp  test_dimindex.hpp  test_euclideanembedding.cpp  test_euclideanembedding.hpp  test_euclideanembeddinginverse.cpp  test_euclideanembeddinginverse.hpp  test_expressiontemplate_indexrenamer.cpp  test_expressiontemplate_indexrenamer.hpp  test_expressiontemplate_reindex.cpp  test_expressiontemplate_reindex.hpp  test_expressiontemplates.cpp  test_expressiontemplates.hpp  test_homogeneouspolynomials.hpp  test_homogeneouspolynomials0.cpp  test_homogeneouspolynomials1.cpp  test_homogeneouspolynomials2.cpp  (+57 more)
tensorhell/tenh_utility_test/: test.cpp  test_homogeneouspolynomials.cpp  test_homogeneouspolynomials5.cpp  test_multivariatepolynomials.cpp  test_multivariatepolynomials.hpp  test_multivariatepolynomials1.cpp
test/: CMakeLists.txt  compoundindex.cpp  contraction_prototype.cpp  eigen_interop_prototype.cpp  list.cpp  multiindex.cpp  strongly_typed_vector_prototype.cpp  tuple.cpp  typetuple.cpp
(+86 files in other folders)
